[package]
name = "matrix_match"
version = "1.0.0"
authors = ["EbbDrop"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EbbDrop/matrix_match"
readme = "README.md"
description = "Macro to match on two values at the same time"
keywords = ["match", "macro", "helper"]
categories = ["rust-patterns", "no-std"]

[dependencies]
